
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int stdout ;

void re_connt(int sock)
{
    if(sock==-1)
    {
   fprintf(stdout," [-] Failed.\n\n");
   fprintf(stdout," Happy Exploit ! :-)\n\n");
   exit(-1);
    }
}
